--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body{
     width: 100%;
     height: 100%;
-    background: ghostwhite;
+    background: white;
     position: relative;
 }
 .banner {
@@ -18,4 +18,29 @@ body{
     padding-top: 10px;
     font-size: 3rem;
     color: slategrey;
+}
+
+.quote-box {
+    border: 1px black solid;
+    padding: 40px;
+    font-size: 1.3rem;
+    margin: auto;
+    margin-top: 10%;
+    height: 240px;
+    width: 600px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
+}
+.quote-text {
+    text-align: justify;
+}
+
+.author-text {
+    padding-top: 5px;
+    text-align: right;
+    font-size: 1rem;
+}
+
+.author-text .source {
+    font-style: italic;
 }
