--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,11 +9,11 @@
       <div class="footer-col footer-col-2">
         <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
       </div>
-    <!-- <div class="footer-col-wrapper">
+    <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         copyright © {{ 'now' | date: "%Y" }} {{ site.author | escape }}
-      </div> -->
-    <!-- <div class="footer-col footer-col-1">
+      </div>
+    <div class="footer-col footer-col-1">
         <ul class="contact-list">
           <li class="p-name">
             {%- if site.author -%}
@@ -32,7 +32,7 @@
 
       <div class="footer-col footer-col-3">
         <p>{{- site.description | escape -}}</p>
-      </div> -->
+      </div>
   </div>
 
   </div>
