--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -7,34 +7,35 @@
         © {{ 'now' | date: "%Y" }} {{ site.author | escape }}
       </div>
       <div class="footer-col footer-col-2">
+        {%- include social.html -%}
         <p class="rss-subscribe">subscribe <a href="{{ "/feed.xml" | relative_url }}">via RSS</a></p>
       </div>
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        copyright © {{ 'now' | date: "%Y" }} {{ site.author | escape }}
-      </div>
-    <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li class="p-name">
-            {%- if site.author -%}
+      <!-- <div class="footer-col-wrapper">
+        <div class="footer-col footer-col-1">
+          copyright © {{ 'now' | date: "%Y" }} {{ site.author | escape }}
+        </div>
+        <div class="footer-col footer-col-1">
+          <ul class="contact-list">
+            <li class="p-name">
+              {%- if site.author -%}
               {{ site.author | escape }}
-            {%- endif -%}
+              {%- endif -%}
             </li>
             {%- if site.email -%}
             <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
             {%- endif -%}
-        </ul>
-      </div>
+          </ul>
+        </div>
 
-      <div class="footer-col footer-col-2">
-        {%- include social.html -%}
-      </div>
+        <div class="footer-col footer-col-2">
+          {%- include social.html -%}
+        </div>
 
-      <div class="footer-col footer-col-3">
-        <p>{{- site.description | escape -}}</p>
-      </div>
-  </div>
+        <div class="footer-col footer-col-3">
+          <p>{{- site.description | escape -}}</p>
+        </div>
+      </div> -->
 
-  </div>
+    </div>
 
 </footer>
